typescript/checker/tests/conformance/parser/ecmascript5/Statements/LabeledStatements/parser_duplicateLabel2.ts.stderr
error: Label target is already declared
 --> $DIR/tests/conformance/parser/ecmascript5/Statements/LabeledStatements/parser_duplicateLabel2.ts:3:3
  |
3 |   target:
  |   ^^^^^^

